@@ -310,7 +310,7 @@ function htmlcdnboxes(req,res) {
     } else {
       res.write('<td class="number bw ovbw">' + (cdnboxState.gettime !== undefined?cdnboxState.gettime:'NA') + '</td>');
     }
-    if (cdnboxStates.local.ipv6 === undefined || cdnboxState.ipv6 === undefined) {
+    if (!cdnboxStates.hasipv6 || cdnboxState.ipv6 === undefined) {
       res.write('<td class="number">NA</td>');
     } else {
       if (cdnboxState.status6 == 'on') {
