@@ -41,6 +41,19 @@ cdnboxStates.loadconfig = function () {
   cdnboxStates.release = fs.readFileSync('./release','utf8').trim();
   cdnboxStates.local = { "config": {} };
   var lconfig = cdnboxStates.config;
+
+  // get local IP addresses and network interfaces.
+  var ifconfig = os.networkInterfaces();
+  cdnboxStates.address2iface = {};
+  for (var iface in ifconfig) {
+    ifconfig[iface].forEach(function(elem) {
+      cdnboxStates.address2iface[elem.address] = iface;
+      if (!elem.internal && elem.family == "IPv6" && elem.scopeid == 0) {
+        cdnboxStates.hasipv6 = elem.address;
+      }
+    });
+  }
+
   if (lconfig.dnsserver.dnscountdownratio === undefined) { lconfig.dnsserver.dnscountdownratio = 1.2; }
   if (lconfig.dnsserver.dnscountavgmin === undefined) { lconfig.dnsserver.dnscountavgmin = 1.5; }
   if (lconfig.dnsserver.globalthrottlebwratio === undefined) { lconfig.dnsserver.globalthrottlebwratio = 0.4; }
@@ -87,7 +100,7 @@ cdnboxStates.loadconfig = function () {
   if (lconfig.clustersecret === undefined) { lconfig.clustersecret = lconfig.httpserver.authorization; }
 }
 
-cdnboxStates.loadconfig(true);
+cdnboxStates.loadconfig();
 
 cdnboxStates.writeconfig = function (config) {
   fs.writeFileSync('./config.json', JSON.stringify(config, null, '  '));
@@ -123,15 +136,6 @@ cdnboxStates.penalbucket.get = function () {
   calcScore(cdnboxStates.local);
   this.calcsigma();
   return Math.floor(this.count);
-}
-
-
-// get local IP addresses and network interfaces.
-var address2iface = {}, ifconfig = os.networkInterfaces();
-for (var iface in ifconfig) {
-    ifconfig[iface].forEach(function(elem) {
-      address2iface[elem.address] = iface;
-    });
 }
 
 var cdnboxDNSserver;
@@ -171,7 +175,7 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
               cdnboxStates.local = cdnboxState; 
               cdnboxState.ipv4 = ips.externalip;
               cdnboxState.ipv4local = ips.localip;
-	    } else if (address2iface[address.address]) {
+	    } else if (cdnboxStates.address2iface[address.address]) {
               cdnboxStates.local = cdnboxState; 
               cdnboxState.ipv4 = address.address;
               cdnboxState.ipv4local = cdnboxState.ipv4;
@@ -182,10 +186,10 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
                 function(ipInt, octet) { return (ipInt<<8) + parseInt(octet, 10)}, 0) >>> 0;
             if (cdnbox.targetbw) {
               if (cdnboxState.ipv4 == cdnboxStates.local.ipv4) {
-                if (address2iface[cdnboxState.ipv4local]) {
-                  cdnboxState.netint = address2iface[cdnboxState.ipv4local];
-                } else if (address2iface[cdnboxState.ipv4]) {
-                  cdnboxState.netint = address2iface[cdnboxState.ipv4];
+                if (cdnboxStates.address2iface[cdnboxState.ipv4local]) {
+                  cdnboxState.netint = cdnboxStates.address2iface[cdnboxState.ipv4local];
+                } else if (cdnboxStates.address2iface[cdnboxState.ipv4]) {
+                  cdnboxState.netint = cdnboxStates.address2iface[cdnboxState.ipv4];
                 }
                 testCDNBoxes();
                 getnetcount(cdnboxState);
@@ -208,7 +212,21 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
         });
         if (cdnbox.name == cdnboxStates.local.config.name && cdnboxState.config.isns) {
           cdnboxDNSserver.serve(choose, cdnboxState.config.dontbindall4?cdnboxState.ipv4local:'0.0.0.0');
-          if (cdnboxState.ipv6) { cdnboxDNSserver.serveIPv6(cdnboxState.ipv6); }
+
+	  // fix 127.0.1.1 in /etc/hosts problem: check if host ipv6 dos not reverse to host name.
+          if (!cdnboxState.ipv6 && cdnboxStates.hasipv6) {
+            dns.reverse(cdnboxStates.hasipv6, (err, addresses) => {
+              if (cdnboxState.config.hostname == addresses[0]) {
+                console.error("Fixing 127.0.1.1 problem with reverse IP matching " + cdnboxState.config.hostname);
+                cdnboxState.ipv6 = cdnboxStates.hasipv6;
+                cdnboxState.ipv6tab = convertIPv6totab(cdnboxStates.hasipv6);
+                cdnboxState.status6 = 'fail';
+                cdnboxDNSserver.serveIPv6(cdnboxState.ipv6);
+              }
+            });
+          } else if (cdnboxState.ipv6) {
+            cdnboxDNSserver.serveIPv6(cdnboxState.ipv6);
+	  }
         }
       });
     }
